@@ -17,6 +17,8 @@ dpkg (1.17.14) UNRELEASED; urgency=low
     - Clarify that -a, -t, -e and -i work with the host system.
   * Place 'Commands:' before 'Options:' sections on --help output in
     dpkg-architecture and dpkg-vendor.
+  * Always warn in dpkg-genchanges on missing Section or Priority value,
+    either empty or '-'.
 
   [ Raphaël Hertzog ]
   * Explain better in deb-triggers(5) why interest/activate-noawait should be
